# jax-pme

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
jaxpme/: __init__.py  calculators.py  ewald.py  interface.py  kspace.py  mesh.py  pme.py  potential.py  potentials.py  prefactors.py  solvers.py  utils.py
jaxpme/batched/: __init__.py  calculators.py  potentials.py  preparation.py  solvers.py
jaxpme/batched_flat/: README.md  batching.py  calculators.py  preparation.py  utils.py
jaxpme/batched_mixed/: README.md  batching.py  calculators.py  kspace.py
jaxpme/batched_mixed_slots/: README.md  batching.py  calculators.py
jaxpme/batched_tiled/: README.md  __init__.py  batching.py  calculators.py  kernel.py  kspace.py
md/: md.py
tests/: conftest.py  test_batched.py  test_batched_flat.py  test_batched_mixed_batching.py  test_batched_mixed_calculator.py  test_batched_mixed_slots.py  test_batched_tiled_batching.py  test_batched_tiled_calculator.py  test_batched_tiled_mixed_pbc.py  test_ewald.py  test_inverse_power_law.py  test_kspace.py  test_slab_correction.py
tests/reference_structures/: coulomb_test_frames.xyz  mad15_2d_subset.xyz
