[tool.poetry]
name = "jax-pme"
version = "0.1.0-alpha.1"
description = "(Particle Mesh) Ewald summation in JAX"
authors = ["Marcel Langer <dev@marcel.science>"]
license = "MIT"
packages = [
    {include = "jaxpme"}
]

[tool.poetry.dependencies]
python = ">=3.7"
vesin = "*"
ase = ">=3.22.1"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
# E741: don't worry about short variable names
# E731: don't worry about lambdas
ignore = ["E741", "E731"]

[tool.ruff.lint.isort]
section-order = ["numpy", "jax", "future", "standard-library", "third-party", "first-party", "local-folder"]
no-lines-before = ["jax"]

[tool.ruff.lint.isort.sections]
"numpy" = ["numpy"]
"jax" = ["jax", "jax.numpy"]


[tool.ruff.lint.extend-per-file-ignores]
